--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,40 @@
 services:
   mongodb:
+    container_name: cassie-mongo
     image: mongo:latest
     ports:
       - "27017:27017"
     volumes:
-      - mongodb_data:/data/db
+      - mongo_data:/data/db
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
 
   backend:
+    container_name: cassie-backend
     build: ./cassie-backend
     ports:
       - "3002:3002"
     volumes:
       - ./cassie-backend:/app
       - /app/node_modules
-    env_file:
-      - ./cassie-backend/.env
     environment:
       - NODE_ENV=development
-      - MONGO_URI=mongodb://mongodb:27017/cassie
+      - MONGODB_URI=mongodb://cassie-mongo:27017/cassie
       - PORT=3002
+      - JWT_SECRET=a1b2c3d4e5f6g7h
     depends_on:
-      - mongodb
+      mongodb:
+        condition: service_healthy
+    networks:
+      - app-network
 
   frontend:
+    container_name: cassie-frontend
     build: ./cassie-frontend
     ports:
       - "3001:3000"
@@ -30,15 +42,15 @@ services:
       - ./cassie-frontend:/app
       - /app/node_modules
     environment:
-      - SKIP_PREFLIGHT_CHECK=true
-      - WDS_SOCKET_PORT=3001
-      - WATCHPACK_POLLING=true
-      - NODE_OPTIONS=--openssl-legacy-provider
       - REACT_APP_API_URL=http://localhost:3002
-    stdin_open: true
-    tty: true
     depends_on:
       - backend
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
 
 volumes:
-  mongodb_data:
+  mongo_data:
