--- a/cassie-frontend/package.json
+++ b/cassie-frontend/package.json
@@ -9,11 +9,12 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.2",
+    "date-fns": "^2.30.0",
     "node-polyfill-webpack-plugin": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0",
     "react-router": "^6.22.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
