--- a/cassie-frontend/package.json
+++ b/cassie-frontend/package.json
@@ -2,6 +2,7 @@
   "name": "cassie-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://yalong12.github.io",
   "dependencies": {
     "@craco/craco": "^5.9.0",
     "@testing-library/dom": "^10.4.0",
@@ -21,9 +22,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
