Remove submodule references and update GitHub Actions workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,12 +15,15 @@ jobs:
       uses: actions/checkout@v4
       with:
         persist-credentials: false
+        submodules: false
+        fetch-depth: 1
 
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '18'
         cache: 'npm'
+        cache-dependency-path: './cassie-frontend/package-lock.json'
 
     - name: Install Frontend Dependencies
       working-directory: ./cassie-frontend
