--- a/cassie-frontend/package.json
+++ b/cassie-frontend/package.json
@@ -2,7 +2,7 @@
   "name": "cassie-frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yalong12.github.io/YALong12.github.io",
+  "homepage": ".",
   "dependencies": {
     "@craco/craco": "^5.9.0",
     "@testing-library/dom": "^10.4.0",
