--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,14 +39,20 @@ jobs:
         npm run build
         echo "Build output contents:"
         ls -la build/
-        cp build/index.html build/404.html
-        touch build/.nojekyll
+
+    - name: Prepare deployment
+      run: |
+        rm -rf public
+        mkdir -p public
+        cp -r cassie-frontend/build/* public/
+        touch public/.nojekyll
+        ls -la public/
 
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         branch: gh-pages
-        folder: cassie-frontend/build
+        folder: public
         clean: true
         force: true 
